fixed spacing on farmer prof contact info

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -216,6 +216,11 @@ left: 125px;
 top: 50px;
 }
 
+.contact-info{
+  position: relative;
+  bottom: 80px;
+}
+
 
 
 #react {
